# architecture-cinemaabyss

./: Project_template.md  docker-compose.yml
.github/workflows/: api-tests.yml  docker-build-push.yml
docs/diagrams/: c4-to-be-containers-diagram.puml
src/kubernetes/: configmap.yaml  dockerconfigsecret.yaml  events-service.yaml  ingress.yaml  monolith.yaml  movies-service.yaml  proxy-service.yaml
src/kubernetes/helm/: values.yaml
src/kubernetes/helm/templates/: configmap.yaml
src/kubernetes/helm/templates/services/: events-service.yaml  proxy-service.yaml
src/kubernetes/kafka/: kafka.yaml  zookeeper.yaml
src/microservices/events/: Cargo.toml  Dockerfile
src/microservices/events/config/: development.toml  production.toml
src/microservices/events/src/: config.rs  lib.rs
src/microservices/events/src/server/: error.rs  mod.rs  model.rs  routes.rs  swagger.rs
src/microservices/events/src/switcher/: mod.rs  model.rs
src/microservices/proxy/: Cargo.toml  Dockerfile  README.md
src/microservices/proxy/config/: development.toml  production.toml
src/microservices/proxy/src/: config.rs  lib.rs  logger.rs
src/microservices/proxy/src/server/: error.rs  mod.rs  routes.rs  swagger.rs
src/microservices/proxy/src/switcher/: helper.rs  mod.rs  model.rs
src/microservices/proxy/src/switcher/distributed/: mod.rs
src/microservices/proxy/src/switcher/events/: mod.rs
src/microservices/proxy/src/switcher/monolith/: mod.rs
