[package]
name = "events"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "^1.0"
async-trait = "^0.1"
config = "0.15.8"
console-subscriber = "0.4.1"
chrono = "0.4.40"
derive_builder = "0.20.2"
dotenv = "^0.15"
getset = "0.1.4"
kafka = "0.10.0"
serde_json = "^1.0"
thiserror = "2.0.11"
tracing = "^0.1"
tracing-subscriber = "^0.3"

[dependencies.axum]
version = "0.8.1"
features = ["tracing", "tower-log"]

[dependencies.reqwest]
version = "0.12.12"
features = ["json"]

[dependencies.serde]
version = "^1.0"
features = ["derive", "serde_derive"]

[dependencies.tokio]
version = "^1.38"
features = ["full"]

[dependencies.tower-http]
version = "0.6.2"
features = ["trace", "cors"]

[dependencies.utoipa]
version = "5.3.1"
features = ["axum_extras", "chrono"]

[dependencies.utoipa-rapidoc]
version = "6.0.0"
features = ["axum"]
